# validador-excel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  backend.py  frontend.py
tests/: test_contrato.py  test_funcional.py
